# aws-ses-contact-form-handler

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  AWS_IAM_POLICY.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  template.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-deploy.yml  ci.yml  code-quality.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  lint-configs.yml  release.yml  security-scan.yml  security.yml  test.yml
src/: __init__.py  handler.py
tests/: __init__.py  conftest.py  test_handler.py
